[tool.poetry]
name = "isaai"
version = "0.1.0"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
aiohttp = "^3.8.3"
notion = "^0.0.28"
keyring = "^23.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
