[tool.poetry]
name = "isaai"
version = "0.1.0"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
aiohttp = "^3.8.3"
notion = "^0.0.28"
keyring = "^23.13.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
